src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@src__generated__shader_atlas__paint_brush_compute.rs.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/paint_brush_compute.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang compute shader: paint_brush.compute.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use serde::Serialize;

use crate::renderer::gpu_write::GPUWrite;
use crate::renderer::*;
use crate::shaders::atlas::{ComputeShaderAtlasEntry, PrecompiledShader};
use crate::shaders::json::{ComputeReflectionJson, ReflectedPipelineLayout};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct BrushParams {
    pub point_count: u32,
    pub brush_radius: f32,
    pub brush_opacity: f32,
    pub brush_pressure: f32,
    pub pigment_color_0_3: glam::Vec4,
    pub pigment_color_4_7: glam::Vec4,
    pub pigment_color_8_11: glam::Vec4,
    pub canvas_size: glam::Vec2,
    pub stroke_points: ReadAddr<StrokePoint>,
}

impl GPUWrite for BrushParams {}
const _: () = assert!(std::mem::size_of::<BrushParams>() == 80);
const _: () = assert!(std::mem::offset_of!(BrushParams, point_count) == 0);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(BrushParams, brush_radius) == 4);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(BrushParams, brush_opacity) == 8);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(BrushParams, brush_pressure) == 12);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(BrushParams, pigment_color_0_3) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);
const _: () = assert!(std::mem::offset_of!(BrushParams, pigment_color_4_7) == 32);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);
const _: () = assert!(std::mem::offset_of!(BrushParams, pigment_color_8_11) == 48);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);
const _: () = assert!(std::mem::offset_of!(BrushParams, canvas_size) == 64);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(BrushParams, stroke_points) == 72);
const _: () = assert!(std::mem::size_of::<ReadAddr<StrokePoint>>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct StrokePoint {
    pub position: glam::Vec2,
}

impl GPUWrite for StrokePoint {}
const _: () = assert!(std::mem::size_of::<StrokePoint>() == 8);
const _: () = assert!(std::mem::offset_of!(StrokePoint, position) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

pub struct Resources<'a> {
    pub wet_mask: &'a StorageTextureHandle,
    pub pressure: &'a StorageTextureHandle,
    pub pigment_0_3: &'a StorageTextureHandle,
    pub pigment_4_7: &'a StorageTextureHandle,
    pub pigment_8_11: &'a StorageTextureHandle,
    pub saturation: &'a StorageTextureHandle,
    pub brush_params_buffer: &'a UniformBufferHandle<BrushParams>,
}


pub const WORKGROUP_SIZE: [u32; 3] = [16, 16, 1];

pub struct Shader {
    pub reflection_json: ComputeReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/paint_brush.comp.json"
        ));

        let reflection_json: ComputeReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config(
        self,
        resources: Resources<'_>,
    ) -> ComputePipelineConfig<'_> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.brush_params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
            resources.wet_mask,
            resources.pressure,
            resources.pigment_0_3,
            resources.pigment_4_7,
            resources.pigment_8_11,
            resources.saturation,
        ];

        ComputePipelineConfig {
            shader: Box::new(self),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
    }

    fn comp_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .compute_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn comp_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/paint_brush.comp.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ComputeShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_compute_shader(&self) -> PrecompiledShader {
        PrecompiledShader {
            entry_point_name: self.comp_entry_point_name(),
            spv_bytes: self.comp_spv(),
        }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn workgroup_size(&self) -> [u32; 3] {
        self.reflection_json.workgroup_size
    }

    fn reflection_json(&self) -> &ComputeReflectionJson {
        &self.reflection_json
    }
}
